# voicepeak-aux

./: .dockerignore  Cargo.toml
docker/: Dockerfile.aarch64-apple-darwin  Dockerfile.aarch64-unknown-linux-gnu  Dockerfile.x86_64-apple-darwin  Dockerfile.x86_64-pc-windows-gnu  Dockerfile.x86_64-unknown-linux-gnu
src/: main.rs  voicepeak.rs
