[package]
name = "voicepeak-aux"
version = "1.2.9-0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
hound = "3.5.1"
path-slash = "0.2.1"
tempfile = "3.10.1"

